# mumba

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  github.rs  i18n.rs  lib.rs  moomba_log.rs  mumba_log.rs  pe_format.rs  provision.rs  regedit.rs  screen.rs  steam.rs  toml.rs  windows.rs
core/src/game/: env.rs  ffnx.rs  ffnx_config.rs  ffnx_installation.rs  input_config.rs  installation.rs  mod.rs  pe_format.rs
core/src/iro/: archive.rs  mod.rs  mod_xml.rs
core/src/os/: mod.rs  regedit.rs  windows.rs
core/tests/: lib_test.rs
core/tests/data/: ffnx.toml  input.cfg  mod.xml
core/tests/game/: ffnx_config.rs  input_config.rs  mod.rs
core/tests/iro/: mod.rs  mod_xml.rs
gui/: Cargo.toml  build.rs
gui/.cargo/: config.toml
gui/src/: lazy_ffnx_config.rs  main.rs  screen.rs  ui_helper.rs  worker.rs  worker_loop.rs
gui/ui/: appwindow.slint  global.slint
gui/ui/components/: message.slint  side_bar.slint
gui/ui/pages/: home.slint  options.slint  select_dir.slint  setup.slint
gui/ui/pages/options/: display.slint  gamepad.slint
gui/wix/: main.wxs
lang/: mumba.en.ftl  mumba.fr.ftl
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs  metadata.rs  shared_memory.rs
