[package]
name = "mmb"
version = "0.1.0"
edition = "2021"
authors = ["myst6re <myst6re@gmail.com>"]

[dependencies]
mumba_core = { path = "../core", default-features = false, features = ["pe"] }
log = "0.4"
clap = "4"

[build-dependencies]
winresource = "0.1"
built = { version = "0.7", features = ["git2"] }
