[package]
name = "moomba_core"
version = "0.1.0"
edition = "2021"
authors = ["myst6re <myst6re@gmail.com>"]
license = "GPL-3.0"

[dependencies]
log = "0.4"
simplelog = { version = "^0.12.2", default-features = false }
toml_edit = "0.22"
ureq = {version = "2.10", features = ["brotli", "json"]}
serde = {version = "1", features = ["derive"]}
zip = {version = "2.1", default-features = false, features = ["bzip2", "deflate64", "deflate", "lzma", "zstd", "xz"]}
zip-extensions = {version = "0.8", default-features = false, features = ["bzip2", "deflate64", "deflate", "lzma", "zstd", "xz"]}
directories = "5.0"
pelite = {version = "=0.10.0", default-features = false, features = ["mmap"]}
regex-lite = "^0.1.6"
version-compare = "0.2.0"
thiserror = "1"
keyvalues-serde = "^0.2.0"
keyvalues-parser = "0.2"

[target.'cfg(windows)'.dependencies]
registry = "1.2"
utfx = "0.1"
windows = {version = "0.56.0", features = ["Win32_UI_Shell"]}
