[package]
name = "mumba_core"
version = "0.1.0"
edition = "2021"
authors = ["myst6re <myst6re@gmail.com>"]
license = "GPL-3.0"

[features]
network = ["dep:ureq", "dep:serde", "dep:jiff"]
steam = ["dep:keyvalues-serde", "dep:keyvalues-parser", "dep:serde"]
zip = ["dep:zip", "dep:zip-extensions"]
config = ["dep:toml_edit"]
pe = ["dep:pelite"]
i18n = ["dep:fluent-bundle", "dep:unic-langid"]
iro = ["dep:iroga", "dep:quick-xml", "dep:serde"]

[dependencies]
log = "0.4"
simplelog = { version = "^0.12.2", default-features = false }
directories = "6.0"
thiserror = "2"
toml_edit = { version = "0.22", optional = true }
ureq = { version = "3", features = ["brotli", "json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
zip = { version = "3.0", optional = true }
zip-extensions = { version = "0.8.3", optional = true }
pelite = { version = "=0.10.0", default-features = false, features = ["mmap"], optional = true }
keyvalues-serde = { version = "^0.2.2", optional = true }
keyvalues-parser = { version = "0.2", optional = true }
jiff = { version = "0.2", default-features = false, features = ["std"], optional = true }
fraction = { version = "0", default-features = false }
regex-lite = "0"
fluent-bundle = { version = "0", optional = true }
unic-langid = { version = "0", optional = true, features = ["macros"] }
sys-locale = "0"
iroga = { git = "https://github.com/myst6re/iroga.git", optional = true }
quick-xml = { version = "0", optional = true, default-features = false, features = ["serialize", "overlapped-lists"] }

[target.'cfg(windows)'.dependencies]
registry = "1.3"
utfx = "0.1"
windows = { version = "0", features = ["Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
rusty-hook = "^0.11.2"
