[package]
name = "moomba"
description = "Modern and fast FFNx configurator"
version = "0.1.0"
edition = "2021"
authors = ["myst6re <myst6re@gmail.com>"]
license = "GPL-3.0"
build = "build.rs"
default-run = "moomba"

[dependencies]
log = "0.4"
moomba_core = { path = "../core", features = ["network", "steam", "zip", "config", "pe"] }
slint = { version = "1.7", default-features = false, features = [
    "std",
    "backend-default",
    "renderer-software",
    "accessibility",
    "compat-1-2",
    "raw-window-handle-06"
] }
thiserror = "1"
rfd = "0.14"
toml_edit = "0.22"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows = {version = "0", features = ["Win32_UI_WindowsAndMessaging"]}

[build-dependencies]
slint-build = "1.7"
winresource = "0.1"
