[package]
name = "mumba"
description = "Modern and fast FFNx configurator"
version = "0.1.0"
edition = "2021"
authors = ["myst6re <myst6re@gmail.com>"]
license = "GPL-3.0"
default-run = "mumba"

[dependencies]
log = "0.4"
mumba_core = { path = "../core", features = ["network", "steam", "zip", "config", "pe", "i18n", "iro"] }
slint = { version = "1.11", default-features = false, features = [
    "std",
    "backend-default",
    "renderer-software",
    "accessibility",
    "compat-1-2",
    "raw-window-handle-06"
] }
thiserror = "2"
rfd = "0"
opener = "=0.7.2"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"

[build-dependencies]
slint-build = "1.11"
winresource = "0.1"
built = { version = "0.7", features = ["git2"] }

[package.metadata.deb]
assets = [
    ["target/release/mumba", "usr/bin/", "755"],
    ["target/release/ff8_launcher.exe", "var/lib/mumba/", "644"],
    ["../lang/mumba.en.ftl", "var/lib/mumba/lang/", "644"],
    ["../lang/mumba.fr.ftl", "var/lib/mumba/lang/", "644"],
    ["../README.md", "usr/share/doc/mumba/README", "644"],
]
