[package]
name = "ff8_launcher"
description = "Moomba FF8 Launcher"
version = "0.1.0"
edition = "2021"
authors = ["myst6re <myst6re@gmail.com>"]

[dependencies]
same-file = "1"
log = "0.4"
simplelog = { version = "^0.12.2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = {version = "0", features = ["Win32_UI_Shell", "Win32_System_Memory", "Win32_Security", "Win32_System_Threading"]}

[build-dependencies]
winresource = "0.1"
built = { version = "0.7", features = ["git2"] }
git2 = "0.19"
